Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17332

User expression fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 4.2.0
    • Qt Creator 4.2.0-rc1
    • Debugger
    • None
    • Windows, G++
    • b84bf4946f2dbd52dba15f22af1edec4b371cb24

    Description

      • Break anywhere
      • Add an expression sizeof(int) -> 4
      • Double-click it and change it to sizeof(double) -> 8
      • Double-click it and change it to sizeof(char) -> not accessible

      The debugger log shows IGNORING REPEATED REQUEST TO EXPAND watch.0

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes