Debugger: Allow repeated editing of watchers

Task-number: QTCREATORBUG-17332
Change-Id: Ie647b956426c81a8f448dfde14b77798b5b73788
Reviewed-by: Orgad Shaneh <orgads@gmail.com>